--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,37 +1,60 @@
 site_name: GrowHardware Docs
+
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - navigation.top
+    - search.highlight
+    - search.suggest
   palette:
     scheme: default
     primary: green
     accent: green
 
 plugins:
+  - search:
   - i18n:
       default_language: es
       languages:
-        es: Español
-        en: English
-        pt: Português
+        es:
+          name: Español
+          build: true
+        en:
+          name: English
+          build: true
+        pt:
+          name: Português
+          build: true
+      nav_translations:
+        es:
+          - Home: index.md
+          - Comparison: comparativa.md
+          - Contribute: contribuir.md
+          - Differentials: diferenciales.md
+          - Protocols: protocolos.md
+        en:
+          - Home: index.md
+          - Comparativa: comparison.md
+          - Contribuir: contribute.md
+          - Diferenciales: differentials.md
+          - Protocolos: protocols.md
+        pt:
+          - Home: index.md
+          - Comparativo: comparativo.md
+          - Contribuir: contribuir.md
+          - Diferenciais: diferenciais.md
+          - Protocolos: protocolos.md
+  - redirects: 
 
-nav:
-  es:
-    - Inicio: index.md
-    - Comparativa: comparativa.md
-    - Contribuir: contribuir.md
-    - Diferenciales: diferenciales.md
-    - Protocolos: protocolos.md
-
-  en:
-    - Home: index.md
-    - Comparison: comparativa.md
-    - Contribute: contribuir.md
-    - Differentials: diferenciales.md
-    - Protocols: protocolos.md
-
-  pt:
-    - Início: index.md
-    - Comparativo: comparativa.md
-    - Contribuir: contribuir.md
-    - Diferenciais: diferenciales.md
-    - Protocolos: protocolos.md
+extra:
+  alternate:
+    - name: Español
+      link: /es/
+      lang: es
+    - name: English
+      link: /en/
+      lang: en
+    - name: Português
+      link: /pt/
+      lang: pt
